backend:add create training
