# backend/gen/http/openapi.yaml
@@ -133,7 +133,113 @@ paths:
                         $ref: '#/definitions/ExercisesUpdateNotFoundResponseBody'
             schemes:
                 - http
+    /trainings:
+        post:
+            tags:
+                - trainings
+            summary: Создание тренировки
+            description: Создание тренировки с упражнениями и подходами
+            operationId: trainings#create
+            parameters:
+                - name: CreateRequestBody
+                  in: body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/CreateTrainingPayload'
+                    required:
+                        - title
+                        - date
+                        - duration
+                        - exercises
+            responses:
+                "201":
+                    description: Created response.
+                    schema:
+                        $ref: '#/definitions/Training'
+                        required:
+                            - id
+                            - title
+                            - date
+                            - duration
+                "400":
+                    description: Bad Request response.
+                    schema:
+                        $ref: '#/definitions/TrainingsCreateBadRequestResponseBody'
+                "404":
+                    description: Not Found response.
+                    schema:
+                        $ref: '#/definitions/TrainingsCreateNotFoundResponseBody'
+            schemes:
+                - http
 definitions:
+    CreateTrainingPayload:
+        title: CreateTrainingPayload
+        type: object
+        properties:
+            date:
+                type: string
+                example: "2025-12-25"
+                format: date
+            duration:
+                type: integer
+                example: 539324614902943859
+                format: int64
+                minimum: 1
+            exercises:
+                type: array
+                items:
+                    $ref: '#/definitions/TrainingExercisePayload'
+                example:
+                    - exercise_id: d322611a-8bec-422e-a03c-3ff523776002
+                      sets:
+                        - reps: 8202675765988522562
+                          weight: 0.9073708839255074
+                        - reps: 8202675765988522562
+                          weight: 0.9073708839255074
+                    - exercise_id: d322611a-8bec-422e-a03c-3ff523776002
+                      sets:
+                        - reps: 8202675765988522562
+                          weight: 0.9073708839255074
+                        - reps: 8202675765988522562
+                          weight: 0.9073708839255074
+            title:
+                type: string
+                example: ph8
+                maxLength: 50
+        example:
+            date: "2025-12-25"
+            duration: 6167935884593322280
+            exercises:
+                - exercise_id: d322611a-8bec-422e-a03c-3ff523776002
+                  sets:
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+                - exercise_id: d322611a-8bec-422e-a03c-3ff523776002
+                  sets:
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+                - exercise_id: d322611a-8bec-422e-a03c-3ff523776002
+                  sets:
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+                - exercise_id: d322611a-8bec-422e-a03c-3ff523776002
+                  sets:
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+            title: hdx
+        required:
+            - title
+            - date
+            - duration
+            - exercises
     ExercisePayload:
         title: ExercisePayload
         type: object
@@ -157,6 +263,24 @@ definitions:
         required:
             - title
             - muscle_group
+    ExerciseSetPayload:
+        title: ExerciseSetPayload
+        type: object
+        properties:
+            reps:
+                type: integer
+                example: 819185818716291159
+                format: int64
+                minimum: 1
+            weight:
+                type: number
+                example: 0.8053731498213298
+                format: double
+        example:
+            reps: 8686692660329139992
+            weight: 0.6686456949132797
+        required:
+            - reps
     Exercises:
         title: Exercises
         type: object
@@ -194,7 +318,7 @@ definitions:
             fault:
                 type: boolean
                 description: Is the error a server-side fault?
-                example: false
+                example: true
             id:
                 type: string
                 description: ID is a unique identifier for this particular occurrence of the problem.
@@ -214,14 +338,14 @@ definitions:
             timeout:
                 type: boolean
                 description: Is the error a timeout?
-                example: true
+                example: false
         description: Invalid input data provided (default view)
         example:
-            fault: true
+            fault: false
             id: 123abc
             message: parameter 'p' must be an integer
             name: bad_request
-            temporary: true
+            temporary: false
             timeout: false
         required:
             - name
@@ -237,7 +361,7 @@ definitions:
             fault:
                 type: boolean
                 description: Is the error a server-side fault?
-                example: true
+                example: false
             id:
                 type: string
                 description: ID is a unique identifier for this particular occurrence of the problem.
@@ -257,7 +381,7 @@ definitions:
             timeout:
                 type: boolean
                 description: Is the error a timeout?
-                example: false
+                example: true
         description: Упражнение не найдено (default view)
         example:
             fault: true
@@ -280,7 +404,7 @@ definitions:
             fault:
                 type: boolean
                 description: Is the error a server-side fault?
-                example: false
+                example: true
             id:
                 type: string
                 description: ID is a unique identifier for this particular occurrence of the problem.
@@ -307,8 +431,8 @@ definitions:
             id: 123abc
             message: parameter 'p' must be an integer
             name: bad_request
-            temporary: true
-            timeout: true
+            temporary: false
+            timeout: false
         required:
             - name
             - id
@@ -323,7 +447,7 @@ definitions:
             fault:
                 type: boolean
                 description: Is the error a server-side fault?
-                example: false
+                example: true
             id:
                 type: string
                 description: ID is a unique identifier for this particular occurrence of the problem.
@@ -343,7 +467,7 @@ definitions:
             timeout:
                 type: boolean
                 description: Is the error a timeout?
-                example: true
+                example: false
         description: Упражнение не найдено, проверьте UUID (default view)
         example:
             fault: true
@@ -388,3 +512,154 @@ definitions:
             - id
             - title
             - muscle_group
+    Training:
+        title: Training
+        type: object
+        properties:
+            created_at:
+                type: string
+                example: "1981-11-13T15:00:00Z"
+                format: date-time
+            date:
+                type: string
+                example: "2006-04-06"
+                format: date
+            duration:
+                type: integer
+                example: 6853357799611504322
+                format: int64
+            id:
+                type: string
+                description: uuid
+                example: Rerum eum voluptatem saepe sit.
+            title:
+                type: string
+                example: Reiciendis quaerat enim et in illum at.
+        example:
+            created_at: "2005-10-09T08:18:55Z"
+            date: "1999-03-18"
+            duration: 2479487535259823896
+            id: Voluptas atque tempore.
+            title: Temporibus et quia delectus.
+        required:
+            - id
+            - title
+            - date
+            - duration
+    TrainingExercisePayload:
+        title: TrainingExercisePayload
+        type: object
+        properties:
+            exercise_id:
+                type: string
+                example: 92396d1a-2b99-4f75-98eb-ec899053470b
+                format: uuid
+            sets:
+                type: array
+                items:
+                    $ref: '#/definitions/ExerciseSetPayload'
+                example:
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+                    - reps: 8202675765988522562
+                      weight: 0.9073708839255074
+        example:
+            exercise_id: b0ba3146-9e81-4f79-b327-8f482554ddbc
+            sets:
+                - reps: 8202675765988522562
+                  weight: 0.9073708839255074
+                - reps: 8202675765988522562
+                  weight: 0.9073708839255074
+        required:
+            - exercise_id
+            - sets
+    TrainingsCreateBadRequestResponseBody:
+        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+        type: object
+        properties:
+            fault:
+                type: boolean
+                description: Is the error a server-side fault?
+                example: true
+            id:
+                type: string
+                description: ID is a unique identifier for this particular occurrence of the problem.
+                example: 123abc
+            message:
+                type: string
+                description: Message is a human-readable explanation specific to this occurrence of the problem.
+                example: parameter 'p' must be an integer
+            name:
+                type: string
+                description: Name is the name of this class of errors.
+                example: bad_request
+            temporary:
+                type: boolean
+                description: Is the error temporary?
+                example: false
+            timeout:
+                type: boolean
+                description: Is the error a timeout?
+                example: false
+        description: create_bad_request_response_body result type (default view)
+        example:
+            fault: true
+            id: 123abc
+            message: parameter 'p' must be an integer
+            name: bad_request
+            temporary: false
+            timeout: true
+        required:
+            - name
+            - id
+            - message
+            - temporary
+            - timeout
+            - fault
+    TrainingsCreateNotFoundResponseBody:
+        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+        type: object
+        properties:
+            fault:
+                type: boolean
+                description: Is the error a server-side fault?
+                example: true
+            id:
+                type: string
+                description: ID is a unique identifier for this particular occurrence of the problem.
+                example: 123abc
+            message:
+                type: string
+                description: Message is a human-readable explanation specific to this occurrence of the problem.
+                example: parameter 'p' must be an integer
+            name:
+                type: string
+                description: Name is the name of this class of errors.
+                example: bad_request
+            temporary:
+                type: boolean
+                description: Is the error temporary?
+                example: true
+            timeout:
+                type: boolean
+                description: Is the error a timeout?
+                example: true
+        description: Упражнение не найдено (default view)
+        example:
+            fault: false
+            id: 123abc
+            message: parameter 'p' must be an integer
+            name: bad_request
+            temporary: true
+            timeout: true
+        required:
+            - name
+            - id
+            - message
+            - temporary
+            - timeout
+            - fault
