# backend/gen/http/trainings/server/encode_decode.go
@@ -1,0 +1,133 @@
+// Code generated by goa v3.23.3, DO NOT EDIT.
+//
+// trainings HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
+
+package server
+
+import (
+	"context"
+	"errors"
+	"io"
+	"net/http"
+
+	trainings "github.com/GrudTrigger/training_tracker/backend/gen/trainings"
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// EncodeCreateResponse returns an encoder for responses returned by the
+// trainings create endpoint.
+func EncodeCreateResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.(*trainings.Training)
+		enc := encoder(ctx, w)
+		body := NewCreateResponseBody(res)
+		w.WriteHeader(http.StatusCreated)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeCreateRequest returns a decoder for requests sent to the trainings
+// create endpoint.
+func DecodeCreateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*trainings.CreateTrainingPayload, error) {
+	return func(r *http.Request) (*trainings.CreateTrainingPayload, error) {
+		var (
+			body CreateRequestBody
+			err  error
+		)
+		err = decoder(r).Decode(&body)
+		if err != nil {
+			if errors.Is(err, io.EOF) {
+				return nil, goa.MissingPayloadError()
+			}
+			var gerr *goa.ServiceError
+			if errors.As(err, &gerr) {
+				return nil, gerr
+			}
+			return nil, goa.DecodePayloadError(err.Error())
+		}
+		err = ValidateCreateRequestBody(&body)
+		if err != nil {
+			return nil, err
+		}
+		payload := NewCreateTrainingPayload(&body)
+
+		return payload, nil
+	}
+}
+
+// EncodeCreateError returns an encoder for errors returned by the create
+// trainings endpoint.
+func EncodeCreateError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(ctx context.Context, err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
+	encodeError := goahttp.ErrorEncoder(encoder, formatter)
+	return func(ctx context.Context, w http.ResponseWriter, v error) error {
+		var en goa.GoaErrorNamer
+		if !errors.As(v, &en) {
+			return encodeError(ctx, w, v)
+		}
+		switch en.GoaErrorName() {
+		case "bad_request":
+			var res *goa.ServiceError
+			errors.As(v, &res)
+			enc := encoder(ctx, w)
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewCreateBadRequestResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.GoaErrorName())
+			w.WriteHeader(http.StatusBadRequest)
+			return enc.Encode(body)
+		case "not_found":
+			var res *goa.ServiceError
+			errors.As(v, &res)
+			enc := encoder(ctx, w)
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewCreateNotFoundResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.GoaErrorName())
+			w.WriteHeader(http.StatusNotFound)
+			return enc.Encode(body)
+		default:
+			return encodeError(ctx, w, v)
+		}
+	}
+}
+
+// unmarshalTrainingExercisePayloadRequestBodyToTrainingsTrainingExercisePayload
+// builds a value of type *trainings.TrainingExercisePayload from a value of
+// type *TrainingExercisePayloadRequestBody.
+func unmarshalTrainingExercisePayloadRequestBodyToTrainingsTrainingExercisePayload(v *TrainingExercisePayloadRequestBody) *trainings.TrainingExercisePayload {
+	res := &trainings.TrainingExercisePayload{
+		ExerciseID: *v.ExerciseID,
+	}
+	res.Sets = make([]*trainings.ExerciseSetPayload, len(v.Sets))
+	for i, val := range v.Sets {
+		if val == nil {
+			res.Sets[i] = nil
+			continue
+		}
+		res.Sets[i] = unmarshalExerciseSetPayloadRequestBodyToTrainingsExerciseSetPayload(val)
+	}
+
+	return res
+}
+
+// unmarshalExerciseSetPayloadRequestBodyToTrainingsExerciseSetPayload builds a
+// value of type *trainings.ExerciseSetPayload from a value of type
+// *ExerciseSetPayloadRequestBody.
+func unmarshalExerciseSetPayloadRequestBodyToTrainingsExerciseSetPayload(v *ExerciseSetPayloadRequestBody) *trainings.ExerciseSetPayload {
+	res := &trainings.ExerciseSetPayload{
+		Reps:   *v.Reps,
+		Weight: v.Weight,
+	}
+
+	return res
+}
