# backend/gen/http/trainings/server/paths.go
@@ -1,0 +1,13 @@
+// Code generated by goa v3.23.3, DO NOT EDIT.
+//
+// HTTP request path constructors for the trainings service.
+//
+// Command:
+// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
+
+package server
+
+// CreateTrainingsPath returns the URL path to the trainings service create HTTP endpoint.
+func CreateTrainingsPath() string {
+	return "/trainings"
+}
