# backend/gen/http/trainings/server/types.go
@@ -1,0 +1,217 @@
+// Code generated by goa v3.23.3, DO NOT EDIT.
+//
+// trainings HTTP server types
+//
+// Command:
+// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
+
+package server
+
+import (
+	"unicode/utf8"
+
+	trainings "github.com/GrudTrigger/training_tracker/backend/gen/trainings"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// CreateRequestBody is the type of the "trainings" service "create" endpoint
+// HTTP request body.
+type CreateRequestBody struct {
+	Title     *string                               `form:"title,omitempty" json:"title,omitempty" xml:"title,omitempty"`
+	Date      *string                               `form:"date,omitempty" json:"date,omitempty" xml:"date,omitempty"`
+	Duration  *int                                  `form:"duration,omitempty" json:"duration,omitempty" xml:"duration,omitempty"`
+	Exercises []*TrainingExercisePayloadRequestBody `form:"exercises,omitempty" json:"exercises,omitempty" xml:"exercises,omitempty"`
+}
+
+// CreateResponseBody is the type of the "trainings" service "create" endpoint
+// HTTP response body.
+type CreateResponseBody struct {
+	// uuid
+	ID        string  `form:"id" json:"id" xml:"id"`
+	Title     string  `form:"title" json:"title" xml:"title"`
+	Date      string  `form:"date" json:"date" xml:"date"`
+	Duration  int     `form:"duration" json:"duration" xml:"duration"`
+	CreatedAt *string `form:"created_at,omitempty" json:"created_at,omitempty" xml:"created_at,omitempty"`
+}
+
+// CreateBadRequestResponseBody is the type of the "trainings" service "create"
+// endpoint HTTP response body for the "bad_request" error.
+type CreateBadRequestResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// CreateNotFoundResponseBody is the type of the "trainings" service "create"
+// endpoint HTTP response body for the "not_found" error.
+type CreateNotFoundResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// TrainingExercisePayloadRequestBody is used to define fields on request body
+// types.
+type TrainingExercisePayloadRequestBody struct {
+	ExerciseID *string                          `form:"exercise_id,omitempty" json:"exercise_id,omitempty" xml:"exercise_id,omitempty"`
+	Sets       []*ExerciseSetPayloadRequestBody `form:"sets,omitempty" json:"sets,omitempty" xml:"sets,omitempty"`
+}
+
+// ExerciseSetPayloadRequestBody is used to define fields on request body types.
+type ExerciseSetPayloadRequestBody struct {
+	Reps   *int     `form:"reps,omitempty" json:"reps,omitempty" xml:"reps,omitempty"`
+	Weight *float64 `form:"weight,omitempty" json:"weight,omitempty" xml:"weight,omitempty"`
+}
+
+// NewCreateResponseBody builds the HTTP response body from the result of the
+// "create" endpoint of the "trainings" service.
+func NewCreateResponseBody(res *trainings.Training) *CreateResponseBody {
+	body := &CreateResponseBody{
+		ID:        res.ID,
+		Title:     res.Title,
+		Date:      res.Date,
+		Duration:  res.Duration,
+		CreatedAt: res.CreatedAt,
+	}
+	return body
+}
+
+// NewCreateBadRequestResponseBody builds the HTTP response body from the
+// result of the "create" endpoint of the "trainings" service.
+func NewCreateBadRequestResponseBody(res *goa.ServiceError) *CreateBadRequestResponseBody {
+	body := &CreateBadRequestResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewCreateNotFoundResponseBody builds the HTTP response body from the result
+// of the "create" endpoint of the "trainings" service.
+func NewCreateNotFoundResponseBody(res *goa.ServiceError) *CreateNotFoundResponseBody {
+	body := &CreateNotFoundResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewCreateTrainingPayload builds a trainings service create endpoint payload.
+func NewCreateTrainingPayload(body *CreateRequestBody) *trainings.CreateTrainingPayload {
+	v := &trainings.CreateTrainingPayload{
+		Title:    *body.Title,
+		Date:     *body.Date,
+		Duration: *body.Duration,
+	}
+	v.Exercises = make([]*trainings.TrainingExercisePayload, len(body.Exercises))
+	for i, val := range body.Exercises {
+		if val == nil {
+			v.Exercises[i] = nil
+			continue
+		}
+		v.Exercises[i] = unmarshalTrainingExercisePayloadRequestBodyToTrainingsTrainingExercisePayload(val)
+	}
+
+	return v
+}
+
+// ValidateCreateRequestBody runs the validations defined on CreateRequestBody
+func ValidateCreateRequestBody(body *CreateRequestBody) (err error) {
+	if body.Title == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("title", "body"))
+	}
+	if body.Date == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("date", "body"))
+	}
+	if body.Duration == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("duration", "body"))
+	}
+	if body.Exercises == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("exercises", "body"))
+	}
+	if body.Title != nil {
+		if utf8.RuneCountInString(*body.Title) > 50 {
+			err = goa.MergeErrors(err, goa.InvalidLengthError("body.title", *body.Title, utf8.RuneCountInString(*body.Title), 50, false))
+		}
+	}
+	if body.Date != nil {
+		err = goa.MergeErrors(err, goa.ValidateFormat("body.date", *body.Date, goa.FormatDate))
+	}
+	if body.Duration != nil {
+		if *body.Duration < 1 {
+			err = goa.MergeErrors(err, goa.InvalidRangeError("body.duration", *body.Duration, 1, true))
+		}
+	}
+	for _, e := range body.Exercises {
+		if e != nil {
+			if err2 := ValidateTrainingExercisePayloadRequestBody(e); err2 != nil {
+				err = goa.MergeErrors(err, err2)
+			}
+		}
+	}
+	return
+}
+
+// ValidateTrainingExercisePayloadRequestBody runs the validations defined on
+// TrainingExercisePayloadRequestBody
+func ValidateTrainingExercisePayloadRequestBody(body *TrainingExercisePayloadRequestBody) (err error) {
+	if body.ExerciseID == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("exercise_id", "body"))
+	}
+	if body.Sets == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("sets", "body"))
+	}
+	if body.ExerciseID != nil {
+		err = goa.MergeErrors(err, goa.ValidateFormat("body.exercise_id", *body.ExerciseID, goa.FormatUUID))
+	}
+	for _, e := range body.Sets {
+		if e != nil {
+			if err2 := ValidateExerciseSetPayloadRequestBody(e); err2 != nil {
+				err = goa.MergeErrors(err, err2)
+			}
+		}
+	}
+	return
+}
+
+// ValidateExerciseSetPayloadRequestBody runs the validations defined on
+// ExerciseSetPayloadRequestBody
+func ValidateExerciseSetPayloadRequestBody(body *ExerciseSetPayloadRequestBody) (err error) {
+	if body.Reps == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("reps", "body"))
+	}
+	if body.Reps != nil {
+		if *body.Reps < 1 {
+			err = goa.MergeErrors(err, goa.InvalidRangeError("body.reps", *body.Reps, 1, true))
+		}
+	}
+	return
+}
