# backend/gen/trainings/endpoints.go
@@ -1,0 +1,40 @@
+// Code generated by goa v3.23.3, DO NOT EDIT.
+//
+// trainings endpoints
+//
+// Command:
+// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
+
+package trainings
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Endpoints wraps the "trainings" service endpoints.
+type Endpoints struct {
+	Create goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "trainings" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	return &Endpoints{
+		Create: NewCreateEndpoint(s),
+	}
+}
+
+// Use applies the given middleware to all the "trainings" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.Create = m(e.Create)
+}
+
+// NewCreateEndpoint returns an endpoint function that calls the method
+// "create" of service "trainings".
+func NewCreateEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*CreateTrainingPayload)
+		return s.Create(ctx, p)
+	}
+}
